# forme

./: .gitignore  .mcp.json  PROGRESS.md  next.config.ts  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
.github/workflows/: ci.yml  deploy-vectorizer.yml  deploy.yml  migrate.yml
docs/: BUILD_SPEC_studio_phase1.md  NEXT_IMAGE_TO_SVG.md  REMOVED_CONSTRAINTS.md  SITE.md  fabrication-research.md
docs/research/: IMAGE_TO_SVG_MVP_SPEC.md  RASTER_TO_SVG_RESEARCH.md
public/: llms.txt
src/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  robots.ts  sitemap.ts
src/app/(site)/: layout.tsx  page.tsx
src/app/admin/: layout.tsx
src/app/debug/: page.tsx
src/app/studio/: page.tsx
src/components/: AnnotationToolbar.tsx  DesignsDrawer.tsx  EmptyState.tsx  FlatCanvas.tsx  Header.tsx  Modal.tsx  ParamsPanel.tsx  Preview3D.tsx  PromptBar.tsx  ValidationPanel.tsx  VersionBar.tsx
src/components/admin/: AdminDashboard.tsx
src/i18n/: he.ts
src/lib/: admin.ts  api.ts  fabrication.config.ts  site.config.ts  vectorizer.ts
src/types/: clipper-lib.d.ts
supabase/migrations/: 0001_init.sql  0002_site.sql  0003_generation_runs.sql
vectorizer/: .gitignore  Dockerfile  README.md  pyproject.toml
vectorizer/app/: cli.py  config.py  pipeline.py
vectorizer/app/api/: main.py
vectorizer/app/core/: conditioning.py  geometry.py  mask.py  metrics.py  renderer.py  selection.py  svg_builder.py  tracing.py  validation.py
vectorizer/app/storage/: job_storage.py
vectorizer/scripts/: make_fixture.py  prep_image.py
vectorizer/tests/: test_pipeline.py
(+62 files in other folders)
