[project]
name = "forme-vectorizer"
version = "0.1.0"
description = "Faithful, verified raster-to-SVG conversion for laser-cut jewelry (image -> cutouts SVG)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pillow>=10",
    "opencv-python-headless>=4.9",
    "shapely>=2.0",
    "svgpathtools>=1.6",
    "vtracer>=0.6",
    "resvg-py>=0.3",
    "cairosvg>=2.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4", "mypy>=1.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
